tests/testcases/errors/BCE0083-1.boo
"""
BCE0083-1.boo(5,24): BCE0083: Static constructors must be public.
"""
class Foo:
	private static def constructor():
		pass

